--- a/MODAMS.Models/MODAMS.Models.csproj
+++ b/MODAMS.Models/MODAMS.Models.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MODAMS.DataAccess\MODAMS.DataAccess.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.5" />
   </ItemGroup>
 
 </Project>
