--- a/MODAMS.Utility/MODAMS.Utility.csproj
+++ b/MODAMS.Utility/MODAMS.Utility.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MailKit" Version="4.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.5" />
     <PackageReference Include="MimeKit" Version="4.0.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
   <ItemGroup>
