Asset Documents Section

--- a/MODAMSWeb/MODAMSWeb.csproj
+++ b/MODAMSWeb/MODAMSWeb.csproj
@@ -33,6 +33,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\assets\plugins\google-api\" />
+    <Folder Include="wwwroot\assetdocuments\" />
   </ItemGroup>
 
 </Project>
