--- a/MODAMSWeb/MODAMSWeb.csproj
+++ b/MODAMSWeb/MODAMSWeb.csproj
@@ -16,6 +16,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.5" />
+    <PackageReference Include="Telerik.Reporting" Version="17.1.23.606" />
+    <PackageReference Include="Telerik.Reporting.Services.AspNetCore" Version="17.1.23.606" />
+    <PackageReference Include="Telerik.UI.for.AspNet.Core" Version="2023.2.606" />
   </ItemGroup>
 
   <ItemGroup>
