--- a/MODAMSWeb/MODAMSWeb.csproj
+++ b/MODAMSWeb/MODAMSWeb.csproj
@@ -7,10 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Reports\**" />
-    <Content Remove="Reports\**" />
-    <EmbeddedResource Remove="Reports\**" />
-    <None Remove="Reports\**" />
+    <None Remove="Reports\AssetReport.trdp" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Reports\AssetReport.trdp">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
@@ -18,14 +22,16 @@
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.5" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.5" />
-    <PackageReference Include="Telerik.Reporting.Services.AspNetCore" Version="17.2.23.1114" />
+    <PackageReference Include="Telerik.Reporting" Version="18.0.24.305" />
+    <PackageReference Include="Telerik.Reporting.OpenXmlRendering" Version="18.0.24.305" />
+    <PackageReference Include="Telerik.Reporting.Services.AspNetCore" Version="18.0.24.305" />
     <PackageReference Include="Telerik.UI.for.AspNet.Core" Version="2023.2.606" />
     <PackageReference Include="ZXing.Net" Version="0.16.9" />
   </ItemGroup>
@@ -50,6 +56,10 @@
     <Folder Include="wwwroot\assets\plugins\google-api\" />
     <Folder Include="wwwroot\assetdocuments\" />
     <Folder Include="wwwroot\disposaldocuments\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Html5ReportViewer.html" />
   </ItemGroup>
 
 </Project>
