--- a/MODAMS.Utility/MODAMS.Utility.csproj
+++ b/MODAMS.Utility/MODAMS.Utility.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="MailKit" Version="4.7.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.5" />
     <PackageReference Include="MimeKit" Version="4.7.1" />
+    <PackageReference Include="OpenCvSharp4" Version="4.10.0.20241108" />
+    <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0.20241108" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
     <PackageReference Include="Telerik.Reporting" Version="18.0.24.130" />
     <PackageReference Include="Telerik.Reporting.OpenXmlRendering" Version="18.0.24.130" />
