--- a/MODAMSWeb/MODAMSWeb.csproj
+++ b/MODAMSWeb/MODAMSWeb.csproj
@@ -30,6 +30,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.5" />
+    <PackageReference Include="OpenCvSharp4" Version="4.10.0.20241108" />
+    <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0.20241108" />
     <PackageReference Include="Telerik.Reporting" Version="18.2.24.806" />
     <PackageReference Include="Telerik.Reporting.OpenXmlRendering" Version="18.2.24.806" />
     <PackageReference Include="Telerik.Reporting.Services.AspNetCore" Version="18.2.24.806" />
@@ -58,6 +60,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\FaceModels\haarcascade_frontalface_default.xml" />
     <None Include="wwwroot\reports\AssetReport.html" />
   </ItemGroup>
 
