--- a/MODAMS.Models/MODAMS.Models.csproj
+++ b/MODAMS.Models/MODAMS.Models.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MODAMS.Localization\MODAMS.Localization.csproj" />
+  </ItemGroup>
+
 </Project>
