--- a/MODAMSWeb/MODAMSWeb.csproj
+++ b/MODAMSWeb/MODAMSWeb.csproj
@@ -1,6 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+	<PropertyGroup>
+		<RootNamespace>MODAMSWeb</RootNamespace>
+	</PropertyGroup>
 
-  <PropertyGroup>
+	<PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -65,6 +68,7 @@
     <None Include="wwwroot\reports\AssetReport.html" />
   </ItemGroup>
 
+	
   <ItemGroup>
     <None Update="Reports\DisposalReport.trdp">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
