--- a/MODAMS.Localization/MODAMS.Localization.csproj
+++ b/MODAMS.Localization/MODAMS.Localization.csproj
@@ -27,6 +27,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>DisposalLabels.resx</DependentUpon>
     </Compile>
+    <Compile Update="Register.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Register.resx</DependentUpon>
+    </Compile>
     <Compile Update="TransferLabels.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -51,6 +56,10 @@
     <EmbeddedResource Update="DisposalLabels.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>DisposalLabels.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Register.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Register.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Update="TransferLabels.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
