--- a/MODAMS.Localization/MODAMS.Localization.csproj
+++ b/MODAMS.Localization/MODAMS.Localization.csproj
@@ -32,6 +32,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>DisposalLabels.resx</DependentUpon>
     </Compile>
+    <Compile Update="DonorLabels.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>DonorLabels.resx</DependentUpon>
+    </Compile>
     <Compile Update="Register.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -41,6 +46,11 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>Reporting.resx</DependentUpon>
+    </Compile>
+    <Compile Update="SubcategoryLabels.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>SubcategoryLabels.resx</DependentUpon>
     </Compile>
     <Compile Update="TransferLabels.Designer.cs">
       <DesignTime>True</DesignTime>
@@ -76,6 +86,10 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>DisposalLabels.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Update="DonorLabels.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>DonorLabels.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Update="Register.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Register.Designer.cs</LastGenOutput>
@@ -83,6 +97,10 @@
     <EmbeddedResource Update="Reporting.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Reporting.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="SubcategoryLabels.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>SubcategoryLabels.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Update="TransferLabels.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
