--- a/MODAMSWeb/MODAMSWeb.csproj
+++ b/MODAMSWeb/MODAMSWeb.csproj
@@ -35,10 +35,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
     <PackageReference Include="OpenCvSharp4" Version="4.10.0.20241108" />
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0.20241108" />
-    <PackageReference Include="Telerik.Reporting" Version="18.2.24.806" />
-    <PackageReference Include="Telerik.Reporting.OpenXmlRendering" Version="18.2.24.806" />
-    <PackageReference Include="Telerik.Reporting.Services.AspNetCore" Version="18.2.24.806" />
-    <PackageReference Include="Telerik.UI.for.AspNet.Core" Version="2024.3.806" />
+    <PackageReference Include="Telerik.Reporting" Version="19.1.25.521" />
+    <PackageReference Include="Telerik.Reporting.OpenXmlRendering" Version="19.1.25.521" />
+    <PackageReference Include="Telerik.Reporting.Services.AspNetCore" Version="19.1.25.521" />
+    <PackageReference Include="Telerik.UI.for.AspNet.Core" Version="2025.2.520" />
     <PackageReference Include="ZXing.Net" Version="0.16.9" />
   </ItemGroup>
 
@@ -70,6 +70,12 @@
 
 	
   <ItemGroup>
+	  <None Update="Reports\AssetReport.trdp">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+    <None Update="Reports\AssetReportSo.trdp">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Reports\DisposalReport.trdp">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
